# Plenum

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  README.md  docker-compose.yml
desktop/: package-lock.json  package.json
desktop/src/: App.tsx  config.ts
desktop/src-tauri/: 2  Cargo.toml  tauri.conf.json
desktop/src-tauri/nsis/: installer.nsi
mobile/: flutter_launcher_icons.yaml  pubspec.yaml
mobile/android/: build.gradle.kts
mobile/lib/: config.dart  main.dart  theme.dart
mobile/rust/: Cargo.toml
relay-server/: Cargo.toml  Dockerfile  README.md
relay-server/src/: lib.rs  main.rs  state.rs  turn_creds.rs  ws.rs
relay-server/tests/: ws_routing.rs
src/: lib.rs  main.rs
src/app/: engine.rs  error.rs  mod.rs  types.rs
src/discovery/: beacon.rs  error.rs  mod.rs  token.rs
src/flow/: error.rs  mod.rs  window.rs
src/protocol/: checksum.rs  encoder.rs  error.rs  mod.rs  packet.rs  parser.rs
src/rtc/: config.rs  error.rs  mod.rs  runtime.rs  signaling_client.rs  transport.rs
src/security/: cipher.rs  error.rs  mod.rs  pairing.rs  replay.rs  session.rs
src/signaling/: error.rs  message.rs  mod.rs  nat.rs  state.rs
src/stream/: chunker.rs  error.rs  mod.rs  reassembler.rs  resume.rs
src/transport/: error.rs  memory.rs  mod.rs  multipath.rs  tcp.rs
tests/: app_api.rs  discovery.rs  flow_window.rs  multipath_failover.rs  protocol_framing.rs  protocol_parser_stress.rs  resume_checkpoint.rs  rtc_transport_roundtrip.rs  security_hardening.rs  signaling_state.rs  stream_roundtrip.rs  transport_memory.rs  transport_tcp.rs
(+35 files in other folders)
