[package]
name = "aether"
version = "0.1.0"
edition = "2024"
[workspace]
members = ["desktop/src-tauri"]

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
